@@ -150,6 +150,8 @@ Bug Fixes
 
 * SOLR-17317: v2 APIs no longer return the incorrect content-type when 'wt=json' specified (Jason Gerlowski)
 
+* SOLR-17315: Fixed "next step" example urls generated by bin/solr create commands to use the newly created  collection/core name. (Eric Pugh)
+
 Dependency Upgrades
 ---------------------
 (No changes)
